# PPRviz-reproducibility

./: .gitignore  README.md  cn_ar_metrics.out  example_in_paper.py
PPRVizL/: load-superppr-viz.py  metrics.out
PPRVizS/: MinimumBoundingBox.py  benchmark.py  config.py  evaluate.py  mds.py  metrics.out  metrics_cr_ar_angr.out  pprviz.py  run_metrics.sh  run_plot.sh
amazon_idx/: amazonds250_25c0_l2_57_taupush.r  amazonds250_25c0_l2_57_taupush.x  amazonds250_25c0_l2_57_taupush.y  amazonds250c0_l1_3715.r  amazonds250c0_l1_3715.x  amazonds250c0_l1_3715.y  amazonds250c0_l2_57.r  amazonds250c0_l2_57.x  amazonds250c0_l2_57.y
approx_dnppr/: CMakeLists.txt  algo.h  build_run.sh  graph.h  lib.h  main.cpp  query_run.sh
approx_dnppr/sparsehash/internal/: densehashtable.h
bwd_idx/: scinet.bwdidx  scinet.bwdidx.offset  trust.bwdidx  trust.bwdidx.offset
dataset/: amazon_attribute.txt  fbego.txt  scinet_attribute.txt  trust.txt  trust_attribute.txt  twego.txt  wikiedit.txt  youtube_attribute.txt
gem_pos/: fbego_gf.txt.npy  fbego_le.txt.npy  fbego_lle.txt.npy  fbego_node2vec.txt.npy  fbego_pivot.txt.npy  fbego_sdne.txt.npy  fbego_simrank.txt.npy  physic_gf.txt.npy  physic_le.txt.npy  physic_lle.txt.npy  physic_node2vec.txt.npy  physic_pivot.txt.npy  physic_sdne.txt.npy  physic_simrank.txt.npy  scinet_gf.txt.npy  scinet_le.txt.npy  scinet_node2vec.txt.npy  scinet_pivot.txt.npy  scinet_sdne.txt.npy  scinet_simrank.txt.npy  trust_gf.txt.npy  trust_le.txt.npy  trust_lle.txt.npy  trust_node2vec.txt.npy  trust_pivot.txt.npy  trust_sdne.txt.npy  trust_simrank.txt.npy  twego_gf.txt.npy  twego_le.txt.npy  twego_lle.txt.npy  twego_node2vec.txt.npy  twego_pivot.txt.npy  twego_sdne.txt.npy  twego_simrank.txt.npy  wikiedit_gf.txt.npy  wikiedit_le.txt.npy  wikiedit_lle.txt.npy  wikiedit_node2vec.txt.npy  wikiedit_pivot.txt.npy  wikiedit_sdne.txt.npy  (+1 more)
louvain/: CMakeLists.txt  community.cpp  community.h  convert  graph.cpp  graph.h  graph_binary.cpp  graph_binary.h  louvainplus  main_community.cpp  main_convert.cpp
louvain/hierachy-output/: amazon_25.root  trust_15.root  youtube_25.root
pr_idx/: amazon.dnpr  scinet.dnpr  trust.dnpr
rwidx/: amazonrandwalks_fora.idx  amazonrandwalks_fora.info.offset  amazonrandwalks_fora.info.size  amazonrandwalks_foratp.info.offset  amazonrandwalks_foratp.info.size  scinetrandwalks_fora.info.offset  scinetrandwalks_fora.info.size  scinetrandwalks_foratp.info.offset  scinetrandwalks_foratp.info.size  trustrandwalks_fora.info.offset  trustrandwalks_fora.info.size  trustrandwalks_foratp.info.offset  trustrandwalks_foratp.info.size
scinet_idx/: scinetds250c0_l2_0_fora.r  scinetds250c0_l2_0_fora.x  scinetds250c0_l2_0_fora.y  scinetds250c0_l2_0_foratp.r  scinetds250c0_l2_0_foratp.x  scinetds250c0_l2_0_foratp.y  scinetds250c0_l2_0_powiter.r  scinetds250c0_l2_0_powiter.x  scinetds250c0_l2_0_powiter.y  scinetds250c0_l2_0_taupush.r  scinetds250c0_l2_0_taupush.x  scinetds250c0_l2_0_taupush.y
trust_idx/: trustds250c0_l2_0_fora.r  trustds250c0_l2_0_fora.x  trustds250c0_l2_0_fora.y  trustds250c0_l2_0_foratp.r  trustds250c0_l2_0_foratp.x  trustds250c0_l2_0_foratp.y  trustds250c0_l2_0_powiter.r  trustds250c0_l2_0_powiter.x  trustds250c0_l2_0_powiter.y  trustds250c0_l2_0_taupush.r  trustds250c0_l2_0_taupush.x  trustds250c0_l2_0_taupush.y
